# serializer version: 1
# name: test_create_all_cards_sheet[All Cards]
  list([
    list([
      'name',
      'have',
    ]),
    list([
      'Air Elemental',
      '=IF(\'LEA\'!A2>0,"LEA:"&\'LEA\'!A2,"")',
    ]),
    list([
      "Akroma's Vengeance",
      '=IF(\'HOP\'!A2>0,"HOP:"&\'HOP\'!A2,"")',
    ]),
    list([
      "Black Sun's Zenith",
      '=IF(\'MBS\'!A3>0,"MBS:"&\'MBS\'!A3,"")',
    ]),
    list([
      'Boseiju, Who Endures',
      '=_xlfn.TEXTJOIN(", ",1,IF(SUM(\'NEO\'!A2:A4)>0,"NEO:"&SUM(\'NEO\'!A2:A4),""),IF(SUM(\'PNEO\'!A2:A3)>0,"PNEO:"&SUM(\'PNEO\'!A2:A3),""))',
    ]),
    list([
      'Boseiju, Who Shelters All',
      '=IF(\'CHK\'!A3>0,"CHK:"&\'CHK\'!A3,"")',
    ]),
    list([
      'Bushi Tenderfoot // Kenzo the Hardhearted',
      '=IF(\'CHK\'!A2>0,"CHK:"&\'CHK\'!A2,"")',
    ]),
    list([
      'Dark Ritual',
      '=_xlfn.TEXTJOIN(", ",1,IF(\'LEA\'!A3>0,"LEA:"&\'LEA\'!A3,""),IF(\'ICE\'!A2>0,"ICE:"&\'ICE\'!A2,""),IF(\'HOP\'!A3>0,"HOP:"&\'HOP\'!A3,""))',
    ]),
    list([
      "Erayo, Soratami Ascendant // Erayo's Essence",
      '=IF(\'SOK\'!A2>0,"SOK:"&\'SOK\'!A2,"")',
    ]),
    list([
      'Faithful Squire // Kaiso, Memory of Loyalty',
      '=IF(\'BOK\'!A2>0,"BOK:"&\'BOK\'!A2,"")',
    ]),
    list([
      'Forest',
      None,
    ]),
    list([
      'Hero of Bladehold',
      '=_xlfn.TEXTJOIN(", ",1,IF(\'PMBS\'!A2>0,"PMBS:"&\'PMBS\'!A2,""),IF(\'MBS\'!A2>0,"MBS:"&\'MBS\'!A2,""))',
    ]),
    list([
      'Rhox',
      '=IF(\'S00\'!A2>0,"S00:"&\'S00\'!A2,"")',
    ]),
    list([
      'Snow-Covered Forest',
      '=IF(\'ICE\'!A6>0,"ICE:"&\'ICE\'!A6,"")',
    ]),
    list([
      'Thallid',
      '=IF(SUM(\'FEM\'!A2:A5)>0,"FEM:"&SUM(\'FEM\'!A2:A5),"")',
    ]),
  ])
# ---
# name: test_create_all_sets[All Sets]
  list([
    list([
      'code',
      'name',
      'release',
      'block',
      'type',
      'printed',
      'have',
      'unique',
      'playsets',
      'extras',
      'nonfoil',
      'foil',
      'value',
    ]),
    list([
      'Total',
      None,
      None,
      None,
      None,
      '=SUM(F3:F65535)',
      '=SUM(G3:G65535)',
      '=SUM(H3:H65535)',
      '=SUM(I3:I65535)',
      '=SUM(J3:J65535)',
      '=SUM(K3:K65535)',
      '=SUM(L3:L65535)',
      '=SUM(M3:M65535)',
    ]),
    list([
      'LEA',
      'Limited Edition Alpha',
      datetime.date(1993, 8, 5),
      'Core Set',
      'core',
      4,
      "=SUM('LEA'!A2:A5)",
      '=COUNTIF(\'LEA\'!A2:A5,">0")',
      '=COUNTIF(\'LEA\'!A2:A5,">=4")',
      '=SUMIF(\'LEA\'!A2:A5,">4")-4*COUNTIF(\'LEA\'!A2:A5,">4")',
      "=SUM('LEA'!I2:I5)",
      "=SUM('LEA'!J2:J5)",
      "=SUM('LEA'!B2:B5)",
    ]),
    list([
      'FEM',
      'Fallen Empires',
      datetime.date(1994, 11, 1),
      None,
      'expansion',
      4,
      "=SUM('FEM'!A2:A5)",
      '=COUNTIF(\'FEM\'!A2:A5,">0")',
      '=COUNTIF(\'FEM\'!A2:A5,">=4")',
      '=SUMIF(\'FEM\'!A2:A5,">4")-4*COUNTIF(\'FEM\'!A2:A5,">4")',
      "=SUM('FEM'!I2:I5)",
      "=SUM('FEM'!J2:J5)",
      "=SUM('FEM'!B2:B5)",
    ]),
    list([
      'ICE',
      'Ice Age',
      datetime.date(1995, 6, 3),
      'Ice Age',
      'expansion',
      5,
      "=SUM('ICE'!A2:A6)",
      '=COUNTIF(\'ICE\'!A2:A6,">0")',
      '=COUNTIF(\'ICE\'!A2:A6,">=4")',
      '=SUMIF(\'ICE\'!A2:A6,">4")-4*COUNTIF(\'ICE\'!A2:A6,">4")',
      "=SUM('ICE'!I2:I6)",
      "=SUM('ICE'!J2:J6)",
      "=SUM('ICE'!B2:B6)",
    ]),
    list([
      'S00',
      'Starter 2000',
      datetime.date(2000, 4, 1),
      None,
      'starter',
      1,
      "=SUM('S00'!A2:A2)",
      '=COUNTIF(\'S00\'!A2:A2,">0")',
      '=COUNTIF(\'S00\'!A2:A2,">=4")',
      '=SUMIF(\'S00\'!A2:A2,">4")-4*COUNTIF(\'S00\'!A2:A2,">4")',
      "=SUM('S00'!I2:I2)",
      "=SUM('S00'!J2:J2)",
      "=SUM('S00'!B2:B2)",
    ]),
    list([
      'CHK',
      'Champions of Kamigawa',
      datetime.date(2004, 10, 1),
      'Kamigawa',
      'expansion',
      2,
      "=SUM('CHK'!A2:A3)",
      '=COUNTIF(\'CHK\'!A2:A3,">0")',
      '=COUNTIF(\'CHK\'!A2:A3,">=4")',
      '=SUMIF(\'CHK\'!A2:A3,">4")-4*COUNTIF(\'CHK\'!A2:A3,">4")',
      "=SUM('CHK'!I2:I3)",
      "=SUM('CHK'!J2:J3)",
      "=SUM('CHK'!B2:B3)",
    ]),
    list([
      'BOK',
      'Betrayers of Kamigawa',
      datetime.date(2005, 2, 4),
      'Kamigawa',
      'expansion',
      1,
      "=SUM('BOK'!A2:A2)",
      '=COUNTIF(\'BOK\'!A2:A2,">0")',
      '=COUNTIF(\'BOK\'!A2:A2,">=4")',
      '=SUMIF(\'BOK\'!A2:A2,">4")-4*COUNTIF(\'BOK\'!A2:A2,">4")',
      "=SUM('BOK'!I2:I2)",
      "=SUM('BOK'!J2:J2)",
      "=SUM('BOK'!B2:B2)",
    ]),
    list([
      'SOK',
      'Saviors of Kamigawa',
      datetime.date(2005, 6, 3),
      'Kamigawa',
      'expansion',
      1,
      "=SUM('SOK'!A2:A2)",
      '=COUNTIF(\'SOK\'!A2:A2,">0")',
      '=COUNTIF(\'SOK\'!A2:A2,">=4")',
      '=SUMIF(\'SOK\'!A2:A2,">4")-4*COUNTIF(\'SOK\'!A2:A2,">4")',
      "=SUM('SOK'!I2:I2)",
      "=SUM('SOK'!J2:J2)",
      "=SUM('SOK'!B2:B2)",
    ]),
    list([
      'HOP',
      'Planechase',
      datetime.date(2009, 9, 4),
      None,
      'planechase',
      2,
      "=SUM('HOP'!A2:A3)",
      '=COUNTIF(\'HOP\'!A2:A3,">0")',
      '=COUNTIF(\'HOP\'!A2:A3,">=4")',
      '=SUMIF(\'HOP\'!A2:A3,">4")-4*COUNTIF(\'HOP\'!A2:A3,">4")',
      "=SUM('HOP'!I2:I3)",
      "=SUM('HOP'!J2:J3)",
      "=SUM('HOP'!B2:B3)",
    ]),
    list([
      'PMBS',
      'Mirrodin Besieged Promos',
      datetime.date(2011, 2, 3),
      'Scars of Mirrodin',
      'promo',
      1,
      "=SUM('PMBS'!A2:A2)",
      '=COUNTIF(\'PMBS\'!A2:A2,">0")',
      '=COUNTIF(\'PMBS\'!A2:A2,">=4")',
      '=SUMIF(\'PMBS\'!A2:A2,">4")-4*COUNTIF(\'PMBS\'!A2:A2,">4")',
      "=SUM('PMBS'!I2:I2)",
      "=SUM('PMBS'!J2:J2)",
      "=SUM('PMBS'!B2:B2)",
    ]),
    list([
      'MBS',
      'Mirrodin Besieged',
      datetime.date(2011, 2, 4),
      'Scars of Mirrodin',
      'expansion',
      2,
      "=SUM('MBS'!A2:A3)",
      '=COUNTIF(\'MBS\'!A2:A3,">0")',
      '=COUNTIF(\'MBS\'!A2:A3,">=4")',
      '=SUMIF(\'MBS\'!A2:A3,">4")-4*COUNTIF(\'MBS\'!A2:A3,">4")',
      "=SUM('MBS'!I2:I3)",
      "=SUM('MBS'!J2:J3)",
      "=SUM('MBS'!B2:B3)",
    ]),
    list([
      'NEO',
      'Kamigawa: Neon Dynasty',
      datetime.date(2022, 2, 18),
      None,
      'expansion',
      3,
      "=SUM('NEO'!A2:A4)",
      '=COUNTIF(\'NEO\'!A2:A4,">0")',
      '=COUNTIF(\'NEO\'!A2:A4,">=4")',
      '=SUMIF(\'NEO\'!A2:A4,">4")-4*COUNTIF(\'NEO\'!A2:A4,">4")',
      "=SUM('NEO'!I2:I4)",
      "=SUM('NEO'!J2:J4)",
      "=SUM('NEO'!B2:B4)",
    ]),
    list([
      'PNEO',
      'Kamigawa: Neon Dynasty Promos',
      datetime.date(2022, 2, 18),
      None,
      'promo',
      2,
      "=SUM('PNEO'!A2:A3)",
      '=COUNTIF(\'PNEO\'!A2:A3,">0")',
      '=COUNTIF(\'PNEO\'!A2:A3,">=4")',
      '=SUMIF(\'PNEO\'!A2:A3,">4")-4*COUNTIF(\'PNEO\'!A2:A3,">4")',
      "=SUM('PNEO'!I2:I3)",
      "=SUM('PNEO'!J2:J3)",
      "=SUM('PNEO'!B2:B3)",
    ]),
  ])
# ---
# name: test_create_set_sheet[ICE]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Dark Ritual',
      '120',
      '4ebcd681-1871-4914-bcd7-6bd95829f6e0',
      'Justin Hampton',
      Decimal('4.61'),
      None,
      None,
      None,
      '=_xlfn.TEXTJOIN(", ",1,IF(\'LEA\'!A3>0,"LEA:"&\'LEA\'!A3,""),IF(\'HOP\'!A3>0,"HOP:"&\'HOP\'!A3,""))',
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Forest',
      '380',
      'fbdcbd97-90a9-45ea-94f6-2a1c6faaf965',
      'Pat Lewis',
      Decimal('0.62'),
      None,
      1,
      None,
      None,
    ]),
    list([
      '=I4+J4',
      '=I4*G4+J4*H4',
      'Forest',
      '381',
      'b346b784-7bde-49d0-bfa9-56236cbe19d9',
      'Pat Lewis',
      Decimal('1.17'),
      None,
      None,
      2,
      None,
    ]),
    list([
      '=I5+J5',
      '=I5*G5+J5*H5',
      'Forest',
      '382',
      '768c4d8f-5700-4f0a-9ff2-58422aeb1dac',
      'Pat Lewis',
      Decimal('0.59'),
      None,
      3,
      4,
      None,
    ]),
    list([
      '=I6+J6',
      '=I6*G6+J6*H6',
      'Snow-Covered Forest',
      '383',
      '4c0ad95c-d62c-4138-ada0-fa39a63a449e',
      'Pat Lewis',
      Decimal('2.35'),
      None,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[00 - All Sets]
  list([
    list([
      'code',
      'name',
      'release',
      'block',
      'type',
      'printed',
      'have',
      'unique',
      'playsets',
      'extras',
      'nonfoil',
      'foil',
      'value',
    ]),
    list([
      'Total',
      None,
      None,
      None,
      None,
      '=SUM(F3:F65535)',
      '=SUM(G3:G65535)',
      '=SUM(H3:H65535)',
      '=SUM(I3:I65535)',
      '=SUM(J3:J65535)',
      '=SUM(K3:K65535)',
      '=SUM(L3:L65535)',
      '=SUM(M3:M65535)',
    ]),
    list([
      'LEA',
      'Limited Edition Alpha',
      datetime.datetime(1993, 8, 5, 0, 0),
      'Core Set',
      'core',
      4,
      "=SUM('LEA'!A2:A5)",
      '=COUNTIF(\'LEA\'!A2:A5,">0")',
      '=COUNTIF(\'LEA\'!A2:A5,">=4")',
      '=SUMIF(\'LEA\'!A2:A5,">4")-4*COUNTIF(\'LEA\'!A2:A5,">4")',
      "=SUM('LEA'!I2:I5)",
      "=SUM('LEA'!J2:J5)",
      "=SUM('LEA'!B2:B5)",
    ]),
    list([
      'FEM',
      'Fallen Empires',
      datetime.datetime(1994, 11, 1, 0, 0),
      None,
      'expansion',
      4,
      "=SUM('FEM'!A2:A5)",
      '=COUNTIF(\'FEM\'!A2:A5,">0")',
      '=COUNTIF(\'FEM\'!A2:A5,">=4")',
      '=SUMIF(\'FEM\'!A2:A5,">4")-4*COUNTIF(\'FEM\'!A2:A5,">4")',
      "=SUM('FEM'!I2:I5)",
      "=SUM('FEM'!J2:J5)",
      "=SUM('FEM'!B2:B5)",
    ]),
    list([
      'ICE',
      'Ice Age',
      datetime.datetime(1995, 6, 3, 0, 0),
      'Ice Age',
      'expansion',
      5,
      "=SUM('ICE'!A2:A6)",
      '=COUNTIF(\'ICE\'!A2:A6,">0")',
      '=COUNTIF(\'ICE\'!A2:A6,">=4")',
      '=SUMIF(\'ICE\'!A2:A6,">4")-4*COUNTIF(\'ICE\'!A2:A6,">4")',
      "=SUM('ICE'!I2:I6)",
      "=SUM('ICE'!J2:J6)",
      "=SUM('ICE'!B2:B6)",
    ]),
    list([
      'S00',
      'Starter 2000',
      datetime.datetime(2000, 4, 1, 0, 0),
      None,
      'starter',
      1,
      "=SUM('S00'!A2:A2)",
      '=COUNTIF(\'S00\'!A2:A2,">0")',
      '=COUNTIF(\'S00\'!A2:A2,">=4")',
      '=SUMIF(\'S00\'!A2:A2,">4")-4*COUNTIF(\'S00\'!A2:A2,">4")',
      "=SUM('S00'!I2:I2)",
      "=SUM('S00'!J2:J2)",
      "=SUM('S00'!B2:B2)",
    ]),
    list([
      'CHK',
      'Champions of Kamigawa',
      datetime.datetime(2004, 10, 1, 0, 0),
      'Kamigawa',
      'expansion',
      2,
      "=SUM('CHK'!A2:A3)",
      '=COUNTIF(\'CHK\'!A2:A3,">0")',
      '=COUNTIF(\'CHK\'!A2:A3,">=4")',
      '=SUMIF(\'CHK\'!A2:A3,">4")-4*COUNTIF(\'CHK\'!A2:A3,">4")',
      "=SUM('CHK'!I2:I3)",
      "=SUM('CHK'!J2:J3)",
      "=SUM('CHK'!B2:B3)",
    ]),
    list([
      'BOK',
      'Betrayers of Kamigawa',
      datetime.datetime(2005, 2, 4, 0, 0),
      'Kamigawa',
      'expansion',
      1,
      "=SUM('BOK'!A2:A2)",
      '=COUNTIF(\'BOK\'!A2:A2,">0")',
      '=COUNTIF(\'BOK\'!A2:A2,">=4")',
      '=SUMIF(\'BOK\'!A2:A2,">4")-4*COUNTIF(\'BOK\'!A2:A2,">4")',
      "=SUM('BOK'!I2:I2)",
      "=SUM('BOK'!J2:J2)",
      "=SUM('BOK'!B2:B2)",
    ]),
    list([
      'SOK',
      'Saviors of Kamigawa',
      datetime.datetime(2005, 6, 3, 0, 0),
      'Kamigawa',
      'expansion',
      1,
      "=SUM('SOK'!A2:A2)",
      '=COUNTIF(\'SOK\'!A2:A2,">0")',
      '=COUNTIF(\'SOK\'!A2:A2,">=4")',
      '=SUMIF(\'SOK\'!A2:A2,">4")-4*COUNTIF(\'SOK\'!A2:A2,">4")',
      "=SUM('SOK'!I2:I2)",
      "=SUM('SOK'!J2:J2)",
      "=SUM('SOK'!B2:B2)",
    ]),
    list([
      'HOP',
      'Planechase',
      datetime.datetime(2009, 9, 4, 0, 0),
      None,
      'planechase',
      2,
      "=SUM('HOP'!A2:A3)",
      '=COUNTIF(\'HOP\'!A2:A3,">0")',
      '=COUNTIF(\'HOP\'!A2:A3,">=4")',
      '=SUMIF(\'HOP\'!A2:A3,">4")-4*COUNTIF(\'HOP\'!A2:A3,">4")',
      "=SUM('HOP'!I2:I3)",
      "=SUM('HOP'!J2:J3)",
      "=SUM('HOP'!B2:B3)",
    ]),
    list([
      'PMBS',
      'Mirrodin Besieged Promos',
      datetime.datetime(2011, 2, 3, 0, 0),
      'Scars of Mirrodin',
      'promo',
      1,
      "=SUM('PMBS'!A2:A2)",
      '=COUNTIF(\'PMBS\'!A2:A2,">0")',
      '=COUNTIF(\'PMBS\'!A2:A2,">=4")',
      '=SUMIF(\'PMBS\'!A2:A2,">4")-4*COUNTIF(\'PMBS\'!A2:A2,">4")',
      "=SUM('PMBS'!I2:I2)",
      "=SUM('PMBS'!J2:J2)",
      "=SUM('PMBS'!B2:B2)",
    ]),
    list([
      'MBS',
      'Mirrodin Besieged',
      datetime.datetime(2011, 2, 4, 0, 0),
      'Scars of Mirrodin',
      'expansion',
      2,
      "=SUM('MBS'!A2:A3)",
      '=COUNTIF(\'MBS\'!A2:A3,">0")',
      '=COUNTIF(\'MBS\'!A2:A3,">=4")',
      '=SUMIF(\'MBS\'!A2:A3,">4")-4*COUNTIF(\'MBS\'!A2:A3,">4")',
      "=SUM('MBS'!I2:I3)",
      "=SUM('MBS'!J2:J3)",
      "=SUM('MBS'!B2:B3)",
    ]),
    list([
      'NEO',
      'Kamigawa: Neon Dynasty',
      datetime.datetime(2022, 2, 18, 0, 0),
      None,
      'expansion',
      3,
      "=SUM('NEO'!A2:A4)",
      '=COUNTIF(\'NEO\'!A2:A4,">0")',
      '=COUNTIF(\'NEO\'!A2:A4,">=4")',
      '=SUMIF(\'NEO\'!A2:A4,">4")-4*COUNTIF(\'NEO\'!A2:A4,">4")',
      "=SUM('NEO'!I2:I4)",
      "=SUM('NEO'!J2:J4)",
      "=SUM('NEO'!B2:B4)",
    ]),
    list([
      'PNEO',
      'Kamigawa: Neon Dynasty Promos',
      datetime.datetime(2022, 2, 18, 0, 0),
      None,
      'promo',
      2,
      "=SUM('PNEO'!A2:A3)",
      '=COUNTIF(\'PNEO\'!A2:A3,">0")',
      '=COUNTIF(\'PNEO\'!A2:A3,">=4")',
      '=SUMIF(\'PNEO\'!A2:A3,">4")-4*COUNTIF(\'PNEO\'!A2:A3,">4")',
      "=SUM('PNEO'!I2:I3)",
      "=SUM('PNEO'!J2:J3)",
      "=SUM('PNEO'!B2:B3)",
    ]),
  ])
# ---
# name: test_write[01 - All Cards]
  list([
    list([
      'name',
      'have',
    ]),
    list([
      'Air Elemental',
      '=IF(\'LEA\'!A2>0,"LEA:"&\'LEA\'!A2,"")',
    ]),
    list([
      "Akroma's Vengeance",
      '=IF(\'HOP\'!A2>0,"HOP:"&\'HOP\'!A2,"")',
    ]),
    list([
      "Black Sun's Zenith",
      '=IF(\'MBS\'!A3>0,"MBS:"&\'MBS\'!A3,"")',
    ]),
    list([
      'Boseiju, Who Endures',
      '=_xlfn.TEXTJOIN(", ",1,IF(SUM(\'NEO\'!A2:A4)>0,"NEO:"&SUM(\'NEO\'!A2:A4),""),IF(SUM(\'PNEO\'!A2:A3)>0,"PNEO:"&SUM(\'PNEO\'!A2:A3),""))',
    ]),
    list([
      'Boseiju, Who Shelters All',
      '=IF(\'CHK\'!A3>0,"CHK:"&\'CHK\'!A3,"")',
    ]),
    list([
      'Bushi Tenderfoot // Kenzo the Hardhearted',
      '=IF(\'CHK\'!A2>0,"CHK:"&\'CHK\'!A2,"")',
    ]),
    list([
      'Dark Ritual',
      '=_xlfn.TEXTJOIN(", ",1,IF(\'LEA\'!A3>0,"LEA:"&\'LEA\'!A3,""),IF(\'ICE\'!A2>0,"ICE:"&\'ICE\'!A2,""),IF(\'HOP\'!A3>0,"HOP:"&\'HOP\'!A3,""))',
    ]),
    list([
      "Erayo, Soratami Ascendant // Erayo's Essence",
      '=IF(\'SOK\'!A2>0,"SOK:"&\'SOK\'!A2,"")',
    ]),
    list([
      'Faithful Squire // Kaiso, Memory of Loyalty',
      '=IF(\'BOK\'!A2>0,"BOK:"&\'BOK\'!A2,"")',
    ]),
    list([
      'Forest',
      None,
    ]),
    list([
      'Hero of Bladehold',
      '=_xlfn.TEXTJOIN(", ",1,IF(\'PMBS\'!A2>0,"PMBS:"&\'PMBS\'!A2,""),IF(\'MBS\'!A2>0,"MBS:"&\'MBS\'!A2,""))',
    ]),
    list([
      'Rhox',
      '=IF(\'S00\'!A2>0,"S00:"&\'S00\'!A2,"")',
    ]),
    list([
      'Snow-Covered Forest',
      '=IF(\'ICE\'!A6>0,"ICE:"&\'ICE\'!A6,"")',
    ]),
    list([
      'Thallid',
      '=IF(SUM(\'FEM\'!A2:A5)>0,"FEM:"&SUM(\'FEM\'!A2:A5),"")',
    ]),
  ])
# ---
# name: test_write[02 - LEA]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Air Elemental',
      '46',
      '69c3b2a3-0daa-4d42-832d-fcdfda6555ea',
      'Richard Thomas',
      105.34,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Dark Ritual',
      '98',
      'ebb6664d-23ca-456e-9916-afcd6f26aa7f',
      'Sandra Everingham',
      300,
      None,
      None,
      None,
      '=_xlfn.TEXTJOIN(", ",1,IF(\'ICE\'!A2>0,"ICE:"&\'ICE\'!A2,""),IF(\'HOP\'!A3>0,"HOP:"&\'HOP\'!A3,""))',
    ]),
    list([
      '=I4+J4',
      '=I4*G4+J4*H4',
      'Forest',
      '294',
      '6f1c8cb0-38eb-408b-94e8-16db83999b3b',
      'Christopher Rush',
      30.34,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I5+J5',
      '=I5*G5+J5*H5',
      'Forest',
      '295',
      'f20c89d9-71c9-45f5-a9cb-6e253b0a7cca',
      'Christopher Rush',
      41.44,
      None,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[03 - FEM]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Thallid',
      '74a',
      '4caaf31b-86a9-485b-8da7-d5b526ed1233',
      'Edward P. Beard, Jr.',
      0.16,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Thallid',
      '74b',
      '80f8f778-ae31-45cd-b27f-f93a07853ede',
      'Jesper Myrfors',
      0.11,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I4+J4',
      '=I4*G4+J4*H4',
      'Thallid',
      '74c',
      '2cf2f3da-9101-439d-8caa-910ff40bfbb3',
      'Ron Spencer',
      0.15,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I5+J5',
      '=I5*G5+J5*H5',
      'Thallid',
      '74d',
      '01827286-b104-41c5-bac9-7c38414bc40e',
      'Daniel Gelon',
      0.21,
      None,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[04 - ICE]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Dark Ritual',
      '120',
      '4ebcd681-1871-4914-bcd7-6bd95829f6e0',
      'Justin Hampton',
      4.61,
      None,
      None,
      None,
      '=_xlfn.TEXTJOIN(", ",1,IF(\'LEA\'!A3>0,"LEA:"&\'LEA\'!A3,""),IF(\'HOP\'!A3>0,"HOP:"&\'HOP\'!A3,""))',
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Forest',
      '380',
      'fbdcbd97-90a9-45ea-94f6-2a1c6faaf965',
      'Pat Lewis',
      0.62,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I4+J4',
      '=I4*G4+J4*H4',
      'Forest',
      '381',
      'b346b784-7bde-49d0-bfa9-56236cbe19d9',
      'Pat Lewis',
      1.17,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I5+J5',
      '=I5*G5+J5*H5',
      'Forest',
      '382',
      '768c4d8f-5700-4f0a-9ff2-58422aeb1dac',
      'Pat Lewis',
      0.59,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I6+J6',
      '=I6*G6+J6*H6',
      'Snow-Covered Forest',
      '383',
      '4c0ad95c-d62c-4138-ada0-fa39a63a449e',
      'Pat Lewis',
      2.35,
      None,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[05 - S00]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Rhox',
      '43',
      '5d5f3f57-410f-4ee2-b93c-f5051a068828',
      'Mark Zug',
      None,
      0.91,
      7,
      12,
      None,
    ]),
  ])
# ---
# name: test_write[06 - CHK]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Bushi Tenderfoot // Kenzo the Hardhearted',
      '2',
      '864ad989-19a6-4930-8efc-bbc077a18c32',
      'Mark Zug',
      0.3,
      4.79,
      None,
      None,
      None,
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Boseiju, Who Shelters All',
      '273',
      '0180d9a8-992c-4d55-8ac4-33a587786993',
      'Ralph Horsley',
      12.58,
      33.94,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[07 - BOK]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Faithful Squire // Kaiso, Memory of Loyalty',
      '3',
      '758abd53-6ad2-406e-8615-8e48678405b4',
      'Mark Zug',
      0.17,
      0.46,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[08 - SOK]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      "Erayo, Soratami Ascendant // Erayo's Essence",
      '35',
      '0b61d772-2d8b-4acf-9dd2-b2e8b03538c8',
      'Matt Cavotta',
      8.59,
      53.6,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[09 - HOP]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      "Akroma's Vengeance",
      '1',
      'b8f5e276-d7c3-4b4b-ac5b-9bb1aeeca8d0',
      'Greg Hildebrandt & Tim Hildebrandt',
      0.54,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Dark Ritual',
      '24',
      'c8c774f2-110e-476c-a4ff-cc86d31c6ae7',
      'Clint Langley',
      4.42,
      None,
      None,
      None,
      '=_xlfn.TEXTJOIN(", ",1,IF(\'LEA\'!A3>0,"LEA:"&\'LEA\'!A3,""),IF(\'ICE\'!A2>0,"ICE:"&\'ICE\'!A2,""))',
    ]),
  ])
# ---
# name: test_write[10 - PMBS]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Hero of Bladehold',
      '8★',
      '8829efa0-498a-43ca-91aa-f9caeeafe298',
      'Scott Chou',
      None,
      5.6,
      None,
      None,
      '=IF(\'MBS\'!A2>0,"MBS:"&\'MBS\'!A2,"")',
    ]),
  ])
# ---
# name: test_write[11 - MBS]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Hero of Bladehold',
      '8',
      '8a3853ec-e307-46e0-96d7-0706b5c45c5e',
      'Austin Hsu',
      4.39,
      24.9,
      None,
      None,
      '=IF(\'PMBS\'!A2>0,"PMBS:"&\'PMBS\'!A2,"")',
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      "Black Sun's Zenith",
      '39',
      '03bdcf52-50b8-42c0-9665-931d83f5f314',
      'Daniel Ljunggren',
      1.63,
      8.4,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[12 - NEO]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Boseiju, Who Endures',
      '266',
      '2135ac5a-187b-4dc9-8f82-34e8d1603416',
      'Chris Ostrowski',
      47.17,
      50.11,
      None,
      None,
      '=IF(SUM(\'PNEO\'!A2:A3)>0,"PNEO:"&SUM(\'PNEO\'!A2:A3),"")',
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Boseiju, Who Endures',
      '412',
      '0055ea30-20fb-4324-a632-8fed87628f05',
      'Esuthio',
      67.54,
      153.78,
      None,
      None,
      '=IF(SUM(\'PNEO\'!A2:A3)>0,"PNEO:"&SUM(\'PNEO\'!A2:A3),"")',
    ]),
    list([
      '=I4+J4',
      '=I4*G4+J4*H4',
      'Boseiju, Who Endures',
      '501',
      '2488a80b-6882-4b59-8232-f02f800204a9',
      'Chris Ostrowski',
      55.19,
      62.88,
      None,
      None,
      '=IF(SUM(\'PNEO\'!A2:A3)>0,"PNEO:"&SUM(\'PNEO\'!A2:A3),"")',
    ]),
  ])
# ---
# name: test_write[13 - PNEO]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Boseiju, Who Endures',
      '266p',
      'dda82840-1f3f-4be7-9bc7-66ff551ef5c0',
      'Chris Ostrowski',
      59.04,
      39.92,
      None,
      None,
      '=IF(SUM(\'NEO\'!A2:A4)>0,"NEO:"&SUM(\'NEO\'!A2:A4),"")',
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Boseiju, Who Endures',
      '266s',
      '2a2f63b7-c33c-41d0-9c8f-7bddd1821f15',
      'Chris Ostrowski',
      None,
      46.69,
      None,
      None,
      '=IF(SUM(\'NEO\'!A2:A4)>0,"NEO:"&SUM(\'NEO\'!A2:A4),"")',
    ]),
  ])
# ---
